# slack-web

./: .gitignore  .hlint.yaml  CHANGELOG.md  LICENSE.md  README.md  cabal.haskell-ci  cabal.project  cabal.project.local  circle.yml  flake.nix  fourmolu.yaml  slack-web.cabal  stack-7.20.yaml  stack-nightly.yaml  stack.yaml  tags
.circleci/: config.yml
.github/workflows/: fourmolu-check.yml  haskell-ci.yml  haskell.yml  nix-checks.yaml
main/: cli.hs
scripts/: release.sh  sanitize.jq  update-golden.sh
src/Web/: Slack.hs
src/Web/Slack/: AesonUtils.hs  Api.hs  Auth.hs  Channel.hs  Chat.hs  Classy.hs  Common.hs  Conversation.hs  Group.hs  Im.hs  Internal.hs  MessageParser.hs  Mpim.hs  Pager.hs  Prelude.hs  Reactions.hs  Types.hs  User.hs  UsersConversations.hs  Util.hs
src/Web/Slack/Experimental/: Blocks.hs  RequestVerification.hs  Views.hs
src/Web/Slack/Experimental/Blocks/: Builder.hs  Types.hs
src/Web/Slack/Experimental/Events/: Types.hs
src/Web/Slack/Files/: Types.hs
src/Web/Slack/Pager/: Types.hs
tests/: JSONGolden.hs  TestImport.hs
tests/TestImport/: Aeson.hs
tests/Web/Slack/: ChatSpec.hs  ConversationSpec.hs  InternalSpec.hs  MessageParserSpec.hs  PagerSpec.hs  UserSpec.hs  UsersConversationsSpec.hs
tests/Web/Slack/Experimental/: BlocksSpec.hs  RequestVerificationSpec.hs  ViewsSpec.hs
tests/Web/Slack/Experimental/Blocks/: TypesSpec.hs
tests/Web/Slack/Experimental/Events/: TypesSpec.hs
tests/Web/Slack/Files/: TypesSpec.hs
tests/golden/BlockKitBuilderMessage/: simple_blocks.golden.json
tests/golden/Conversation/: no_previous_names.golden  no_previous_names.json  shared_channel.golden  shared_channel.json
tests/golden/FileObject/: example.golden  example.json  real.golden  real.json
tests/golden/InfoRsp/: general.golden  general.json  im.json
tests/golden/JoinRsp/: test.golden  test.json
tests/golden/ListRsp/: with_bots.golden  with_bots.json
tests/golden/MembersReq/: with_limit.golden  with_limit.json
tests/golden/MembersRsp/: test.golden  test.json
tests/golden/PublishResp/: views.publish example.golden  views.publish example.json
tests/golden/ResponseJSON/: failed_view_publish.golden  failed_view_publish.json  metadata_example.golden  metadata_example.json
tests/golden/SlackView/: homeTabView.golden  homeTabView.json  modalView.golden  modalView.json
tests/golden/SlackWebhookEvent/: app_home_opened_home.golden  app_home_opened_home.json  app_home_opened_messages.golden  app_home_opened_messages.json  botMessage.golden  botMessage.json  channel_left.golden  channel_left.json  channel_shared.golden  channel_shared.json  channel_unshared.golden  channel_unshared.json  circleci.golden  circleci.json  createChannel.golden  createChannel.json  email_message.golden  email_message.json  forwarded_message.golden  forwarded_message.json  github_notification.golden  github_notification.json  github_notification_ts_string.golden  github_notification_ts_string.json  github_with_link.golden  github_with_link.json  joinChannel.actual  joinChannel.json  link.golden  link.json  messageChange.actual  messageChange.json  messageExample.actual  messageExample.golden  messageExample.json  messageIm.golden  messageIm.json  message_deleted.golden  message_deleted.json  message_file_share.golden  (+15 more)
tests/golden/UpdateRsp/: actual.golden  actual.json  sample.golden  sample.json
tests/golden/UsersConversationsResponse/: im_and_channels.golden  im_and_channels.json
